added descriptors and links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>sec</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>hello sec ily</title>
+</head>
+<body>
+    <h1>hello this is secs website</h1>
+    <h2>i will make this look awesome later but fr now just click what u need</h2>
+    <div id="directories">
+        <link rel="stylesheet" href="/SetAnimation-Finder">
+    </div>
+</body>
+</html>
