--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>hello this is secs website</h1>
     <h2>i will make this look awesome later but fr now just click what u need</h2>
     <div id="directories">
-        <link rel="stylesheet" href="/SetAnimation-Finder">
+        <a href="./SetAnimation Finder">SetAnimation Finder</a>
     </div>
 </body>
 </html>
